# poe_trade

./: .dockerignore  .env  .env.example  .gitignore  .npmrc  .vestige  00-ecosystem-overview.md  01-architecture.md  02-implementation-tasklist.md  03-strategy-registry.md  04-exilelens-linux-item-capture.md  05-buildatlas-pob-intelligence.md  06-db-etl-roadmap.md  07-exilelens-overlay-plan.md  08-questing-companion-plan.md  09-dynamic-item-filter-plan.md  10-comprehensive-feature-backlog.md  11-poe-domain-research-dossier.md  AGENTS.md  Dockerfile  Makefile  NeoPlanus.md  README.md  api.logs  apispec.yml  ask_user.md  backend.patch  backend3.patch  backend5.patch  backtest_latest_results_mirage_14d.tsv  backtest_run_ids_all.tsv  docker-compose.dev.yml  docker-compose.qa.yml  docker-compose.yml  i_fucked_up.md  index.html  opencode.json  package-lock.json  package.json  playwright.config.cjs  (+9 more)
.lovable/: plan.md
.sisyphus/: boulder.json
.state/: cursor  poe_ml_runtime_profile.json
api doc/: Developer Docs - Path of Exile.html  auth Docs - Path of Exile.html  cl Docs - Path of Exile.html  data Docs - Path of Exile.html  ref  Docs - Path of Exile.html
artifacts/: docker-compose-config-optional.json  docker-compose-config.json  docker-compose-services.txt  endpoint-map.md  endpoint-route-hits.txt  env-status.txt
audit/: markdown-sweep-2026-02-23.md  quality-audit.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: .gitignore  AGENTS.md  ops-runbook.md  ops-runtime-ui-upgrade-plan.md  v2-gap-matrix.md  v2-implementation-plan.md  v2-plan-qa.md  v2-v3-feature-triage.md
frontend_contract_tests/: test_ml_visibility.py
intel/: clickhouse_schema.sql  llm_work_packets.md  poe_trading_intelligence_suite_spec.md  repo-structure.md  starter_strategy_pack.yaml
poe_trade/: AGENTS.md  __init__.py  cli.py  stash_scan.py
poe_trade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schema/: AGENTS.md
scripts/: audit_fast_sale_benchmark.py  benchmark_fast_sale_ideas.py  benchmark_item_families.py  benchmark_lgbm_neo.py  benchmark_mirage_iron_ring_branch.py  copy_pricing_dataset.py  validate-scenario-inventory-negative.mjs  validate-scenario-inventory.mjs  verify_ml_deterministic_pack.py
src/: App.tsx  index.css
supabase/: config.toml
(+28696 files in other folders)
