[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe_trade"
version = "0.1.0"
description = "Path of Exile ledger tooling for multi-service ingestion and analytics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Wraeclast Operators", email = "ops@example.com"}
]
dependencies = [
  "python-dotenv>=1.0",
]

[project.scripts]
poe-ledger-cli = "poe_trade.cli:main"
market_harvester = "poe_trade.services.market_harvester:main"
poe-migrate = "poe_trade.services.migrator:main"
poe-ml = "poe_trade.ml.cli:main"

[tool.setuptools.packages.find]
include = ["poe_trade*"]
